# slambook2_CTC

./: .gitignore  README.md
Chapter02/01_g++/: Notes.md  helloSLAM.cpp
Chapter02/02_cmake/: CMakeLists.txt  Notes.md
Chapter02/03_library/: CMakeLists.txt  Notes.md
Chapter02/04_shared_library/: CMakeLists.txt  Notes.md
Chapter02/05_header_file/: CMakeLists.txt  Notes.md
Chapter02/05_header_file/include/: libHelloSLAM.h
Chapter03/01_use_Eigen/: CMakeLists.txt
Chapter03/01_use_Eigen/src/: eigenMatrix.cpp
Chapter03/02_use_Geometry/: CMakeLists.txt
Chapter03/02_use_Geometry/src/: eigenGeometry.cpp
Chapter03/03_coordinate_transformation/: CMakeLists.txt
Chapter03/03_coordinate_transformation/src/: coordinateTransform.cpp
Chapter03/04_plot_trajectory/: CMakeLists.txt
Chapter03/04_plot_trajectory/include/: libVisualization.h
Chapter03/04_plot_trajectory/src/: Visualization.cpp  plotTrajectory.cpp
Chapter03/05_visualize_Geometry/: CMakeLists.txt
Chapter03/05_visualize_Geometry/src/: visualizeGeometry.cpp
Chapter04/01_use_Sophus/: CMakeLists.txt
Chapter04/01_use_Sophus/src/: useSophus.cpp
Chapter04/02_traj_error/: BuildNRun.sh  CMakeLists.txt  main.cpp
Chapter04/02_traj_error/include/: ProcessData.h  RMSE.h  TrajType.h  VisualizeTraj.h
Chapter04/02_traj_error/src/: ComputeError.cpp  PlotTraj.cpp  ReadTraj.cpp  TrajectoryError.cpp
Chapter06/01_Gauss_Newton/: BuildNRun.sh  CMakeLists.txt  main.cpp
Chapter06/01_Gauss_Newton/config/: example.yaml
Chapter06/01_Gauss_Newton/include/: DataGeneration.h  Iteration.h
Chapter06/01_Gauss_Newton/src/: GetData.cpp  IterateGN.cpp
Chapter06/02_CurveFitting_Ceres/: BuildNRun.sh  CMakeLists.txt  main.cpp
Chapter06/02_CurveFitting_Ceres/include/: DataGeneration.h  Problems.h
Chapter06/02_CurveFitting_Ceres/src/: GetData.cpp
Extras/01_Templates/01_Function_Templates/examples/: 01_GetMax_NoHeader.cpp  02_GetMax_Header.cpp  03_GetMax_auto.cpp
Extras/01_Templates/01_Function_Templates/include/: 02_GetMax.h  03_GetMax_auto.h
Extras/01_Templates/01_Function_Templates/src/: GetMax.cpp
Extras/01_Templates/02_Class_Templates/: CMakeLists.txt
Extras/01_Templates/02_Class_Templates/examples/: 01_Stack_NoHeader.cpp
Extras/02_Ceres/: CMakeLists.txt
Extras/02_Ceres/examples/: 01_hello_world.cpp  02_numeric_derivative.cpp  03_analytic_derivative.cpp  04_powell.cpp  05_curve_fitting.cpp  06_robust_curve_fitting.cpp
Extras/02_Ceres/include/: 01_hello_world.h  02_numeric_derivative.h  03_analytic_derivative.h  04_powell.h  curve_data.h  curve_fitting_residual.h
Extras/02_Ceres/src/: curve_data.cpp
Extras/03_queue/: Build.sh  CMakeLists.txt
Extras/03_queue/examples/: 01_hello_world.cpp  02_use_struct.cpp
Extras/03_queue/include/: 02_struct.h
